--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "webpack",
-    "dev": "webpack --watch & http-server ./dist --port 8101 -s"
+    "dev": "webpack --watch & http-server ./dist --port 8101 -s --proxy http://localhost:8101?"
   },
   "dependencies": {
     "gsap": "^3.10.4",
